now work validation with visual effects but for now react only for change one field

--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,11 @@ p {
 .container {
 	margin-top: 50px;
 }
+
+.form_validation_error{
+    border-color: red;
+}
+
+.validation_error, .label_validation_error  {
+    color: red;
+}
