--- a/modules/numbers/style.css
+++ b/modules/numbers/style.css
@@ -1,13 +1,3 @@
-body {
-    background-color: lightblue;
-}
-
-h1 {
-    color: white;
+td {
     text-align: center;
-}
-
-p {
-    font-family: verdana;
-    font-size: 20px;
 }
