block back button, and add mobile meta tag

--- a/modules/numbers/style.css
+++ b/modules/numbers/style.css
@@ -4,7 +4,7 @@ td {
 }
 
 #prompt {
-    background-color: white;
+    background-color: #e9ecef;
     height: 50px;
     width: 100%;
     text-align: center;
